--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
-    "@netlify/vite-plugin-tanstack-start": "^1.2.6",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
@@ -34,6 +33,7 @@
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "nitro": "^3.0.1-alpha.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sonner": "^2.0.7",
